added a few more projects

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>Ryan Solan's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -92,7 +92,7 @@
 							<h2>Arcade-Style Survival Game</h2>
 							<p>C# Unity Game</p>
 						</header>
-						<p>A 10-hour game jam project in Unity. 
+						<p>A 10-hour game jam project with a group of 3 developers in Unity. 
 							This required the creation of a melee and 
 							ranged enemy type with random spawning that 
 							ramps up over time, a score system, health, movement, 
@@ -122,23 +122,51 @@
 
 				<!-- Five -->
 				<section id="five" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pacman_game.gif" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/Sudo.png" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Sudoku Solver</h2>
-							<p>Python</p>
+							<p>Python, Time Complexity</p>
 						</header>
-						<p>Created an AI Pac-Man player to learn the 
-							foundational concepts of AI such as informed
-							state-space search, probabilistic inference, and
-							reinforcement learning.
+						<p>Takes a sudoku visualizer and adds
+							to it advanced sudoku techniques in order to speed up solve times. Even after these advancements the build still ultimately 
+							relies on backtracking in the worst case. <br>
+
+							This project was created as an exploration of the P vs NP problem 
+							and was an attempt to better understand why large sudoku boards are probably impossible to solve without backtracking.
 						</p>
+						<ul class="actions">
+							<li><a href="https://github.com/SoloSSBU/Sudoku-Solver" class="button">GitHub</a></li>
+						</ul>
 					</div>
 					<a href="#six" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Five -->
-				<section id="six" class="wrapper style1 special fade-up">
+				<!-- Six -->
+				<section id="six" class="spotlight style3 right">
+					<span class="image fit main bottom"><img src="images/PokemonShowdown.png" alt="" /></span>
+					<div class="content">
+						<header>
+							<h2>Pokemon Random Teambuilder</h2>
+							<p>Python, Selenium</p>
+						</header>
+						<p>This app takes a list of your favorite pokemon, randomizes them, and then picks a team in which only one
+							of each type is allowed. After picking the team, the app goes online to smogon (a website with the most popular pokemon builds)
+							using selenium, and copy's the most popular build for each pokemon in the team to your clipboard. Then simply paste the team into
+							Pokemon Showdown and play!<br><br>
+							See the story of why I made this and the code on my GitHub.
+
+
+						</p>
+						<ul class="actions">
+							<li><a href="https://github.com/SoloSSBU/Sudoku-Solver" class="button">GitHub</a></li>
+						</ul>
+					</div>
+					<a href="#seven" class="goto-next scrolly">Next</a>
+				</section>
+
+			<!-- seven -->
+				<section id="seven" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
 							<h2>Accumsan sed tempus adipiscing blandit</h2>
@@ -205,12 +233,8 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/ryan-solan/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/SoloSSBU" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
