--- a/index.html
+++ b/index.html
@@ -15,12 +15,28 @@
 	<body class="is-preload landing">
 		<div id="page-wrapper">
 
+
+			<!-- Header -->
+			<header id="header">
+				<h1><ul class = "icons">
+					<li><a href="https://github.com/SoloSSBU" class="icon brands alt fa-github"></a></li>
+					<li><a href="https://www.linkedin.com/in/ryan-solan/" class="icon brands alt fa-linkedin-in"></a></li>
+				</ul>
+			</h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="#seven" class="button primary">Table of Contents</a></li>
+					</ul>
+				</nav>
+			</header>
+
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
 						<header>
 							<h2>Ryan Solan's Portfolio</h2>
-							<p>A collection of my
+							<p>Recent UC Berkeley Computer Science Graduate<br>
+								A collection of my
 							programming projects</p>
 						</header>
 						<span class="image"><img src="images/headshot.jpeg" alt="" /></span>
@@ -86,7 +102,7 @@
 				</section>
 
 				<!-- three -->
-				<section id="three" class="spotlight style3 right">
+				<section id="three" class="spotlight style1 right">
 					<span class="image fit main bottom"><img src="images/PokemonShowdown.png" alt="" /></span>
 					<div class="content">
 						<header>
@@ -111,7 +127,7 @@
 			
 
 			<!-- four -->
-				<section id="four" class="spotlight style3 right">
+				<section id="four" class="spotlight style3 left">
 					<span class="image fit main bottom"><img src="images/survivalgame.png" alt="" /></span>
 					<div class="content">
 						<header>
@@ -155,7 +171,7 @@
 				</section>
 
 				<!-- six -->
-				<section id="six" class="spotlight style3 left">
+				<section id="six" class="spotlight style2 left">
 					<span class="image fit main bottom"><img src="images/pacman_game.gif" alt="" /></span>
 					<div class="content">
 						<header>
@@ -213,41 +229,13 @@
 								</section>
 							</div>
 						</div>
-						<footer class="major">
+						<footer class="">
 							<ul class="actions special">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="#" class="button">Back to Top</a></li>
 							</ul>
 						</footer>
 					</div>
 				</section>
-
-			<!-- six -->
-				<section id="six" class="wrapper style2 special fade">
-					<div class="container">
-						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
-						</header>
-						<form method="post" action="#" class="cta">
-							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
-							</div>
-						</form>
-					</div>
-				</section>
-
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/ryan-solan/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/SoloSSBU" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
-
 		</div>
 
 		<!-- Scripts -->
