Fixed spelling and grammar in Pokemon project

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 					<span class="image fit main bottom"><img src="images/PokemonShowdown.png" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Random Pokemon Teambuilder</h2>
+							<h2>Random Pokémon Teambuilder</h2>
 							<p>Python, Selenium</p>
 						</header>
-						<p>This app takes a list of your favorite pokemon, randomizes them, and then picks a team in which only one
-							of each type is allowed. After picking the team, the app goes online to smogon (a website with the most popular pokemon builds)
-							using selenium, and copy's the most popular build for each pokemon in the team to your clipboard. Then simply paste the team into
-							Pokemon Showdown and play!<br><br>
+						<p>This app takes a list of your favorite Pokémon, randomizes them, and then picks a team in which only one
+							of each type is allowed. After picking the team, the app goes online to Smogon (a website with the most popular Pokémon builds)
+							using Selenium, and copies the most popular build for each Pokémon in the team to your clipboard. Then simply paste the team into
+							Pokémon Showdown and play!<br><br>
 							See the story of why I made this and the code on my GitHub.
 
 
