added JS and AWS to TOC

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<!-- <span class="icon solid alt major fa-flask"></span> -->
 									<h3><a href="#three">Random Pokemon Teambuilder</a></h3>
-									<p>Python, Selenium</p>
+									<p>Python, Selenium, JavaScript, AWS</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<!-- <span class="icon solid alt major fa-paper-plane"></span> -->
