--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Landed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Ryan Solan's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/fav.png" type="image/x-icon"> <!-- Add this line -->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload landing">
@@ -41,7 +37,6 @@
 							programming projects</p>
 						</header>
 						<span class="image"><img src="images/headshot.jpeg" alt="" /></span>
-						<!-- <span class="image"><img src="images/headshot.jpeg" alt="" /></span> -->
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -119,7 +114,7 @@
 
 						</p>
 						<ul class="actions">
-							<li><a href="https://github.com/SoloSSBU/Sudoku-Solver" class="button">GitHub</a></li>
+							<li><a href="https://github.com/SoloSSBU/Random-PokeBuilder" class="button">GitHub</a></li>
 							<li><a href="pokemon.html" class="button">Website</a></li>
 						</ul>
 					</div>
